syntax = "proto3";

option csharp_namespace = "Carting.gRPC";

package carting;

// The greeting service definition.
service Carting {
  // Sends a greeting
  rpc GetCartByExternalIdAsync (CartByExternalIdRequest) returns (CartResponse);

  rpc GetCartItemsByExternalId (CartByExternalIdRequest) returns (stream CartItemResponse) {}

  rpc AddItemToCart (stream AddCartItemRequest) returns (CartResponse) {}

  rpc AddItemToCartBiDirectional (stream AddCartItemRequest) returns (stream CartResponse) {}
}

// Define request message for GetCartByExternalId method
message CartByExternalIdRequest {
  // External ID of the cart
  int32 cart_external_id = 1;
}

message AddCartItemRequest {
  // External ID of the cart
  int32 cart_external_id = 1;
  // Cart item details
  int32 item_external_id = 2;
  string item_name = 3;
  double item_price = 4;
  uint32 item_quantity = 5;
  // Image details
  string item_url = 6;
  string item_alt_text = 7;
}

// Define response message for GetCartByExternalId method
message CartResponse {
  // Cart details
  string id = 1;
  int32 external_id = 2;
  repeated CartItemResponse items = 3;
}

// Define message for CartItem
message CartItemResponse {
  // Cart item details
  int32 external_id = 1;
  string name = 2;
  ImageResponse image = 3;
  double price = 4;
  uint32 quantity = 5;
}

// Define message for Image
message ImageResponse {
  // Image details
  string url = 1;
  string alt_text = 2;
}
